# Xbox-Virtual-Controller

./: LICENSE  README.md  XVC.sln  build.rs
XVC/: Config.hpp  Emulator.hpp  Key.hpp  Processor.hpp  XVC.vcxproj  XVC.vcxproj.filters  main.cpp  resources.aps  resources.rc
Xbox Virtual Controller/: Cargo.toml  LICENSE  README.md  icon.rc
Xbox Virtual Controller/src/: processor.rs
src/: config.rs  main.rs
